--- a/scss/application.scss
+++ b/scss/application.scss
@@ -7,9 +7,23 @@ $light-gray: #E9E9E9;
 $dark-gray: #252627;
 $pink: #F91656;
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: 'Raleway', sans-serif;
-  background-color: $dark-gray;
+  // background-color: $dark-gray;
+}
+
+.wrapper {
+  width: 90%;
+  margin: 0 auto;
+  overflow: auto;
+}
+
+.wrapper_padding {
+  padding: 1.8rem 0;
 }
 
 .clearfix:before,
@@ -22,8 +36,45 @@ body {
   clear: both;
 }
 
+h1, h2, h3, h4, h5, h6, p, ul, li {
+  color: $dark;
+}
+
+h1 {
+  font-size: 2.5rem;
+}
+
+h2 {
+  font-size: 2rem;
+}
+
+h3 {
+  font-size: 1.75rem;
+}
+
+h4 {
+  font-size: 1.375rem;
+}
+
+h5 {
+  font-size: 1.25rem;
+}
+
+h6 {
+  font-size: 1rem;
+}
+
+p, li {
+  font-size: 1.1rem;
+  line-height: 1.75;
+}
+
+p, ul, ol {
+  margin: 0 0 1.6em 0;
+}
+
 #main_navigation {
-  padding: 2.5em 5%;
+  padding: 1.9em 5%;
   border-bottom: 1px solid $light-gray;
   .name {
     font-weight: 700;
@@ -47,3 +98,5 @@ body {
     }
   }
 }
+
+@import 'welcome';
