--- a/scss/welcome.scss
+++ b/scss/welcome.scss
@@ -32,6 +32,14 @@
     margin-bottom: .5em;
   }
 
+  a {
+    text-decoration: none;
+    color: $dark;
+    &:hover {
+      color: $highlight;
+    }
+  }
+
   .date {
     font-size: .8em;
     margin-bottom: 2em;
