--- a/scss/application.scss
+++ b/scss/application.scss
@@ -103,6 +103,7 @@ hr {
     text-decoration: none;
     color: $highlight;
     float: left;
+    border-radius: 2px;
   }
   nav {
     float: right;
@@ -142,6 +143,35 @@ hr {
         color: $highlight;
       }
     }
+  }
+}
+
+input[type="text"], input [type="email"], input [type="password"], textarea {
+  width: 100%;
+  max-width: 100%;
+  height: 3em;
+  border: 2px solid $light-gray;
+  padding: 1em;
+  margin: .5em 0 2em 0;
+  border-radius: 2px;
+}
+
+textarea {
+  min-height: 20em;
+}
+
+input[type="submit"], .button {
+  outline: none;
+  background: transparent;
+  border: 2px solid $light-gray;
+  text-align: center;
+  font-size: 1em;
+  color: $dark;
+  text-decoration: none;
+  padding: 1em 2em;
+  &:hover {
+    border: 2px solid $highlight;
+    color: $highlight;
   }
 }
 
