--- a/scss/application.scss
+++ b/scss/application.scss
@@ -157,7 +157,7 @@ input[type="text"], input [type="email"], input [type="password"], textarea {
 }
 
 textarea {
-  min-height: 20em;
+  min-height: 10em;
 }
 
 input[type="submit"], .button {
@@ -177,4 +177,5 @@ input[type="submit"], .button {
 
 @import 'welcome';
 @import 'post_project.scss';
+@import 'contact_form.scss';
 
