Homepage styled and links fixed for social media

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
 
   <body>
      <header id="main_navigation" class="clearfix">
-      <a href="index.html" class="name">Nayela Wickramasuriya</a>
+      <%= link_to "Nayela Wickramasuriya", root_path, class: "name" %>
       <nav>
         <%= link_to "Articles", posts_path %>
         <a href="#">Projects</a>
@@ -28,9 +28,9 @@
     <footer id="main_footer">
       <p class="copyright">&copy  Nayela Wickramasuriya 2018</p>
       <nav>
-        <a href="#"><i class="fab fa-twitter"></i></a>
-        <a href="#"><i class="fab fa-github"></i></a>
-        <a href="#"><i class="fab fa-linkedin"></i></a>
+        <a href="https://twitter.com/nayelawick" target="_blank"><i class="fab fa-twitter"></i></a>
+        <a href="https://github.com/naywick" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="https://www.linkedin.com/in/nayela-wickramasuriya/" target="_blank"><i class="fab fa-linkedin"></i></a>
       </nav>
     </footer>
   </body>
