--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,7 +6,7 @@
       </header>
 
       <div id="content">
-        <%= @post.content %>
+        <%= markdown @post.content %>
       </div>
 
       <hr>
@@ -25,3 +25,5 @@
       <hr>
 
     </div>
+
+    <%= link_to "Edit", edit_post_path(@post) %>
