--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,8 +2,8 @@
       <div class="col-1 about homepage_content">
         <h2>About</h2>
         <hr>
-        <p>I am a fullstack Ruby on Rails developer, living in London, UK.</p>
-        <p>I enjoy building dynamic and scalable web applications, and beautiful websites showcasing businesses, <a href="#">portfolios and blogs</a>.</p>
+        <p>I am a fullstack Ruby on Rails developer and consultant, living in London, UK.</p>
+        <p>I can help you showcase your portfolio and skillset in the best possible manner, with an approach tailored to your specific talents, and beautifully present your blog in a way that aligns with your core values and aims. I also build websites and web applications which expand to match the growth rate of your business, to provide both you and your clients an enjoyable, effortless and seamless user experience.</a>.</p>
         <p>As a former corporate investigator and strategic communications specialist, I can also provide advice on business strategy, and on how you can best reach your target audiences.</p>
       </div>
       <div class="col-2 homepage_content">
