--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,6 @@
  <div id="post_show_content" class="skinny_wrapper wrapper_padding">
       <header>
-        <p class="date"><%= l Date.current %></p>
+        <p class="date"><%= @post.created_at.strftime('%e %B %Y') %></p>
         <h1><%= @post.title %></h1>
         <hr>
       </header>
