--- a/app/assets/stylesheets/pages/_general.scss
+++ b/app/assets/stylesheets/pages/_general.scss
@@ -182,6 +182,22 @@ input[type="submit"], .button {
   }
 }
 
+.project_button {
+  background: $highlight;
+  color: $white;
+  text-decoration: none;
+  padding: 1em 2em;
+  border-radius: 2px;
+  &:hover {
+    background: $dark;
+  }
+}
+
+.button_wrapper {
+  margin: 4em 0 0 0;
+  text-align: center;
+}
+
 @import 'welcome';
 @import 'posts_projects';
 // @import 'contact_form';
