--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -11,17 +11,15 @@
         <hr>
         <% @posts.each do |post| %>
           <h3><a href="#"><%= link_to post.title, post %></a></h3>
-          <p class="date"><%= l Date.current %></p>
+          <p class="date"><%= post.created_at.strftime('%e %B %Y') %></p>
         <% end %>
       </div>
       <div class="col-3 homepage_content">
         <h2>Things I've Built</h2>
         <hr>
-        <h3><a href="#">Twitter Clone</a></h3>
-        <p class="date">Friday April 10th</p>
-        <h3><a href="#">Pinterest Clone</a></h3>
-        <p class="date">Friday April 10th</p>
-        <h3><a href="#">Example Portfolio</a></h3>
-        <p class="date">Friday April 10th</p>
+        <% @projects.each do |project| %>
+          <h3><a href="#"><%= link_to project.title, project %></a></h3>
+          <p class="date"><%= project.created_at.strftime('%e %B %Y') %></p>
+        <% end %>
       </div>
     </div>
