--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -8,7 +8,7 @@
       <br>
 
       <%= f.label :email %> <br>
-      <%= f.email_field :email, required: true %>
+      <%= f.text_field :email, required: true %>
 
       <br>
 
