--- a/app/assets/stylesheets/pages/_posts_projects.scss
+++ b/app/assets/stylesheets/pages/_posts_projects.scss
@@ -63,6 +63,25 @@
   }
 }
 
+.admin_links {
+  border-top: 1px solid $light-gray;
+  border-bottom: 1px solid $light-gray;
+  text-align: center;
+  padding: 1em 0;
+  margin: 3em 0;
+  a {
+    color: $light;
+    margin: 0 1em;
+    font-weight: 700;
+    font-size: .8em;
+    text-transform: uppercase;
+    text-decoration: none;
+    &:hover {
+      color: $highlight;
+    }
+  }
+}
+
 // - - - - Pagination
 
 .pagination:before,
