--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,9 +17,12 @@
      <header id="main_navigation" class="clearfix">
       <%= link_to "Nayela Wickramasuriya", root_path, class: "name" %>
       <nav>
-        <%= link_to "Articles", posts_path %>
+        <%= link_to "Blog", posts_path %>
         <%= link_to "Projects", projects_path %>
         <%= link_to "Contact", new_contact_path %>
+        <% if user_signed_in? %>
+          <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
+        <% end %>
       </nav>
     </header>
     <% if notice %>
