Banner added, but cannot show background image - WIP

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,7 +1,7 @@
 $dark: #424652;
 $light: #9A9DA4;
 $white: #FFFFFF;
-$highlight: #53FEA2;
+$highlight: #1fd192;
 $light-gray: #E9E9E9;
 // used to be border ^
 $dark-gray: #252627;
