--- a/app/assets/stylesheets/pages/_general.scss
+++ b/app/assets/stylesheets/pages/_general.scss
@@ -107,6 +107,7 @@ hr {
   margin: 2rem 0;
 }
 
+// ---------- NAVBAR ---------
 #main_navigation {
   padding: 1.9em 5%;
   border-bottom: 1px solid $light-gray;
@@ -133,6 +134,8 @@ hr {
     }
   }
 }
+
+// -------------------------------
 
 #page_title {
    text-align: center;
