--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -369,7 +369,7 @@ hr {
   display: block;
   height: 2px;
   border: 0;
-  border-top: 2px solid #53FEA2;
+  border-top: 2px solid #1fd192;
   margin: 2rem 0; }
 
 #main_navigation {
@@ -383,7 +383,7 @@ hr {
     border: 2px solid #E9E9E9;
     padding: 1rem;
     text-decoration: none;
-    color: #53FEA2;
+    color: #1fd192;
     float: left;
     border-radius: 2px; }
   #main_navigation nav {
@@ -416,7 +416,7 @@ hr {
       margin-left: 1em;
       padding-top: .2em; }
       #main_footer nav i:hover {
-        color: #53FEA2; }
+        color: #1fd192; }
 
 input[type="text"], input [type="email"], input [type="password"], textarea {
   width: 100%;
@@ -440,11 +440,11 @@ input[type="submit"], .button {
   text-decoration: none;
   padding: 1em 2em; }
   input[type="submit"]:hover, .button:hover {
-    border: 2px solid #53FEA2;
-    color: #53FEA2; }
+    border: 2px solid #1fd192;
+    color: #1fd192; }
 
 .project_button {
-  background: #53FEA2;
+  background: #1fd192;
   color: #FFFFFF;
   text-decoration: none;
   padding: 1em 2em;
@@ -480,7 +480,7 @@ input[type="submit"], .button {
   text-decoration: none;
   color: #424652; }
   .homepage_content a:hover {
-    color: #53FEA2; }
+    color: #1fd192; }
 
 .homepage_content .date {
   font-size: .8em;
@@ -493,9 +493,20 @@ input[type="submit"], .button {
 .about {
   padding: 0 7.5% 0 0; }
   .about a {
-    color: #53FEA2;
+    color: #1fd192;
     font-weight: 700;
     text-decoration: none; }
+
+.banner {
+  display: flex;
+  background-size: cover;
+  height: 100vh;
+  align-items: center;
+  justify-content: space-around; }
+
+.banner-content {
+  /*display: flex;*/
+  text-align: center; }
 
 #posts_wrapper {
   padding: 3em 0; }
@@ -512,7 +523,7 @@ input[type="submit"], .button {
         text-decoration: none;
         color: #424652; }
         #posts_wrapper .post h2 a:hover {
-          color: #53FEA2; }
+          color: #1fd192; }
     #posts_wrapper .post hr {
       margin: 3em auto; }
 
@@ -541,7 +552,7 @@ input[type="submit"], .button {
     color: #424652;
     padding: 1em 1.5em; }
     #share_box i:hover {
-      color: #53FEA2;
+      color: #1fd192;
       cursor: pointer; }
 
 .admin_links {
@@ -558,7 +569,7 @@ input[type="submit"], .button {
     text-transform: uppercase;
     text-decoration: none; }
     .admin_links a:hover {
-      color: #53FEA2; }
+      color: #1fd192; }
 
 .pagination:before,
 .pagination:after {
@@ -583,10 +594,10 @@ input[type="submit"], .button {
     font-style: normal;
     color: #424652; }
     .pagination a:hover, .pagination .previous_page:hover, .pagination .current:hover, .pagination .next_page:hover {
-      background: #53FEA2;
+      background: #1fd192;
       color: #FFFFFF; }
   .pagination .current {
-    background: #53FEA2;
+    background: #1fd192;
     color: #FFFFFF; }
   .pagination .disabled {
     color: #C0C0C0; }
@@ -639,7 +650,7 @@ html, body {
         text-decoration: none;
         color: #424652; }
         #posts_wrapper .post h2 a:hover {
-          color: #53FEA2; }
+          color: #1fd192; }
     #posts_wrapper .post hr {
       margin: 3em auto; }
 
@@ -668,7 +679,7 @@ html, body {
     color: #424652;
     padding: 1em 1.5em; }
     #share_box i:hover {
-      color: #53FEA2;
+      color: #1fd192;
       cursor: pointer; }
 
 .admin_links {
@@ -685,7 +696,7 @@ html, body {
     text-transform: uppercase;
     text-decoration: none; }
     .admin_links a:hover {
-      color: #53FEA2; }
+      color: #1fd192; }
 
 .pagination:before,
 .pagination:after {
@@ -710,10 +721,10 @@ html, body {
     font-style: normal;
     color: #424652; }
     .pagination a:hover, .pagination .previous_page:hover, .pagination .current:hover, .pagination .next_page:hover {
-      background: #53FEA2;
+      background: #1fd192;
       color: #FFFFFF; }
   .pagination .current {
-    background: #53FEA2;
+    background: #1fd192;
     color: #FFFFFF; }
   .pagination .disabled {
     color: #C0C0C0; }
@@ -745,7 +756,7 @@ html, body {
   text-decoration: none;
   color: #424652; }
   .homepage_content a:hover {
-    color: #53FEA2; }
+    color: #1fd192; }
 
 .homepage_content .date {
   font-size: .8em;
@@ -758,6 +769,17 @@ html, body {
 .about {
   padding: 0 7.5% 0 0; }
   .about a {
-    color: #53FEA2;
+    color: #1fd192;
     font-weight: 700;
     text-decoration: none; }
+
+.banner {
+  display: flex;
+  background-size: cover;
+  height: 100vh;
+  align-items: center;
+  justify-content: space-around; }
+
+.banner-content {
+  /*display: flex;*/
+  text-align: center; }
