--- a/app/assets/stylesheets/pages/_welcome.scss
+++ b/app/assets/stylesheets/pages/_welcome.scss
@@ -51,3 +51,54 @@
       text-decoration: none;
     }
   }
+
+// ---------- BANNER ------------
+
+.banner {
+  display: flex;
+  background-size: cover;
+  height: 100vh;
+  align-items: center;
+  justify-content: space-around;
+  // background-image: url('images/laptop_desk_white.jpg')
+  // background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%);
+}
+
+.banner-content {
+  /*display: flex;*/
+  text-align: center;
+}
+
+// .btn-green {
+//   color: white;
+//   padding: 25px 35px;
+//   border-radius: 4px;
+//   font-weight: bold;
+//   font-size: 20px;
+//   background: #6AD58B;
+//   transition: background 0.3s ease;
+// }
+// .btn-green:hover {
+//   background: #3ac162;
+//   text-decoration: none;
+//   color: white;
+// }
+
+// .btn-yours {
+//   text-decoration: none;
+//   background-color: $highlight;
+//   border-radius: 5px;
+//   color: white;
+//   padding: 25px 35px;
+//   font-weight: bold;
+//   text-align: center;
+//   margin: 10px auto;
+//   display: block;
+//   font-size: 20px;
+//   width: 130px;
+// }
+
+// .btn-yours:hover {
+//   background-color: #3ac162;
+//   text-decoration: none;
+// }
